--- a/.drone.yml
+++ b/.drone.yml
@@ -6,31 +6,31 @@ workspace:
   path: src/github.com/yourname/go-drone-hello-world
 
 steps:
-  - name: report
-    image: golang
-    volumes:
-      - name: reports
-        path: /var/reports
-    commands:
-      - mkdir -p /var/reports
-      - go get
-      - go get github.com/360EntSecGroup-Skylar/goreporter
-      - goreporter -p ./ -f html -r /var/reports/
+#   - name: report
+#     image: golang
+#     volumes:
+#       - name: reports
+#         path: /var/reports
+#     commands:
+#       - mkdir -p /var/reports
+#       - go get
+#       - go get github.com/360EntSecGroup-Skylar/goreporter
+#       - goreporter -p ./ -f html -r /var/reports/
 
-#  - name: build
-#    image: golang
-#    commands:
-#      - go get
-#      - go build -o output
-#      - chmod +x output
-#
-#  - name: run
-#    image: golang
-#    commands:
-#      - go get
-#      - go build -o output
-#      - chmod +x output
-#      - ./output
+ - name: build
+   image: golang
+   commands:
+     - go get
+     - go build -o output
+     - chmod +x output
+
+ - name: run
+   image: golang
+   commands:
+     - go get
+     - go build -o output
+     - chmod +x output
+     - ./output
 
 volumes:
   - name: reports
